# ai-trading-company

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
config/: firm.json  firm.yaml
docs/: openclaw-operations.md
scripts/: daily_archive.sh
tests/: test_charts.py  test_control.py  test_dashboard.py  test_execution.py  test_risk.py  test_strategy.py  test_web_smoke.py
trading_firm/: cli.py  config.py  dashboard_server.py  utils.py
trading_firm/adapters/: alpaca.py  kis.py
trading_firm/control/: commands.py
trading_firm/data/: market_data.py  news.py
trading_firm/execution/: base.py  paper.py
trading_firm/models/: db.py  types.py
trading_firm/reporting/: charts.py  morning.py
trading_firm/risk/: engine.py
trading_firm/strategies/: engine.py  event.py  meanrev.py  trend.py
trading_firm/web/: app.js  index.html  styles.css
trading_firm/web/src/: App.jsx  main.jsx
trading_firm/web/src/components/: MacroStrip.jsx  MarketStrip.jsx  NavShell.jsx  PositionsView.jsx  ReportsView.jsx  StockInline.jsx  TopBar.jsx  WorkspaceView.jsx
trading_firm/web/src/hooks/: useAnimatedNumber.js  useAppShellState.js  useMacroStripControls.js  useMarketIndicatorsState.js  useReportsState.js
trading_firm/web/src/lib/: appCoreConfig.js  connectRealtimeFeed.js  dashboardUtils.js
